fixed form alignment

--- a/style/style.css
+++ b/style/style.css
@@ -384,8 +384,11 @@ li a {
   color: #888888;
 }
 /*=== REGISTER & SIGN IN ===*/
-
-
+#login-form, #register-form {
+  width: 70%;
+  margin: 0 auto;
+  min-width: 280px;
+}
 
 /* ====== LIST ALL PAGE =======*/
 
